@@ -84,6 +84,7 @@ public class ProcessHost: MarshalByRefObject, IProcessHost, ISponsor
 	
 	public RemoteProcessObject CreateInstance (Type type)
 	{
+		InitializeRuntime (type);
 		RemoteProcessObject proc = (RemoteProcessObject) Activator.CreateInstance (type);
 		proc.Attach (controller);
 		return proc;
@@ -94,9 +95,20 @@ public class ProcessHost: MarshalByRefObject, IProcessHost, ISponsor
 		try {
 			Type t = Type.GetType (fullTypeName);
 			if (t == null) throw new InvalidOperationException ("Type not found: " + fullTypeName);
+			InitializeRuntime (t);
 			return CreateInstance (t);
 		} catch (Exception ex) {
 			throw new InvalidOperationException ("Type not found: " + fullTypeName);
+		}
+	}
+	
+	void InitializeRuntime (Type type)
+	{
+		object[] ats = type.GetCustomAttributes (typeof(AddinDependencyAttribute), true);
+		if (ats.Length > 0) {
+			Runtime.Initialize ();
+			foreach (AddinDependencyAttribute at in ats)
+				Runtime.AddInService.PreloadAddin (null, at.Addin);
 		}
 	}
 	
